Fix translations and event text hyphenation.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -5,11 +5,13 @@
   "filterpanel.choose_date_time": "Choose date and time",
   "filterpanel.choose_time": "Choose time",
   "filterpanel.time_increment": "Time increment (sec.)",
+  "filterpanel.area_search_range": "Area search range (min.)",
   "filterpanel.simulate.start": "Simulate",
   "filterpanel.simulate.stop": "Stop simulation",
   "filterpanel.filter_by_vehicle": "Filter by vehicle",
   "filterpanel.remove_vehicle": "Remove vehicle",
   "filterpanel.filter_by_stop": "Search stops",
+  "filterpanel.remove_stop": "Remove stop",
   "filterpanel.filter_by_line": "Search line",
   "filterpanel.find_line_route": "Search route",
   "filterpanel.select_route": "Choose route",
