--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -5,6 +5,7 @@
   "filterpanel.choose_date_time": "Valitse päivä ja aika",
   "filterpanel.choose_time": "Valitse aika",
   "filterpanel.time_increment": "Aikamuutos (sek.)",
+  "filterpanel.area_search_range": "Aluehaun aikaraja (min.)",
   "filterpanel.simulate.start": "Simuloi",
   "filterpanel.simulate.stop": "Pysäytä simulaatio",
   "filterpanel.filter_by_vehicle": "Hae ajoneuvoa",
@@ -71,20 +72,20 @@
   "journey.stops": "Pysäkit",
   "journey.events": "Tapahtumat",
 
-  "journey.event.DEP": "Lähtö",
-  "journey.event.ARR": "Saapuminen",
-  "journey.event.TIMING_STOP_ARR": "Saapuminen ajantasauspysäkille",
-  "journey.event.TERMINAL_ARR": "Saapuminen päätypysäkille",
+  "journey.event.DEP": "Poistuminen pysäkkialueelta",
+  "journey.event.ARR": "Saapuminen pysäkkialueelle",
+  "journey.event.TIMING_STOP_ARR": "Saapuminen pysäkkialueelle",
+  "journey.event.TERMINAL_ARR": "Saapuminen pysäkkialueelle",
   "journey.event.PLANNED": "Suunniteltu lähtö",
   "journey.event.CANCELLATION": "Peruutus",
   "journey.event.DOO": "Ovi auki",
   "journey.event.DOC": "Ovi kiinni",
   "journey.event.DUE": "Saapumassa pysäkille",
-  "journey.event.ARS": "Saapunut pysäkille",
-  "journey.event.PDE": "Valmis lähtemään pysäkiltä",
+  "journey.event.ARS": "Saapuminen",
+  "journey.event.PDE": "Lähtö",
   "journey.event.PAS": "Ajo pysäkin ohi pysähtymättä",
   "journey.event.WAIT": "Odottaa pysäkillä",
-  "journey.event.TLR": "Liikennevaloetuustapahtuma",
+  "journey.event.TLR": "Liikennevaloetuus&shy;tapahtuma",
   "journey.event.TLA": "Liikennevalokojeen vastaus",
   "journey.event.DA": "Kuljettaja kirjautunut ajoneuvoon",
   "journey.event.DOUT": "Kuljettaja kirjautunut ulos ajoneuvosta",
