--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -5,16 +5,17 @@
   "filterpanel.choose_date_time": "Välj datum och tid",
   "filterpanel.choose_time": "Välj tid",
   "filterpanel.time_increment": "Tidsändring (sek.)",
+  "filterpanel.area_search_range": "Områdssökningens tidslängd (min.)",
   "filterpanel.simulate.start": "Simulera",
   "filterpanel.simulate.stop": "Sluta simulera",
   "filterpanel.filter_by_vehicle": "Sök fordon",
-  "filterpanel.remove_vehicle": "Remove vehicle",
+  "filterpanel.remove_vehicle": "Återställ fordon",
   "filterpanel.filter_by_stop": "Sök hållplatser",
-  "filterpanel.remove_stop": "Remove stop",
+  "filterpanel.remove_stop": "Återställ hållplats",
   "filterpanel.filter_by_line": "Sök linjer",
   "filterpanel.find_line_route": "Sök rutt",
   "filterpanel.select_route": "Välj rutt",
-  "filterpanel.remove_route": "Remove route",
+  "filterpanel.remove_route": "Återställ rutt",
   "filterpanel.no_routes": "Inga rutter hittade",
   "filterpanel.planned_start_time": "Planerad starttid",
   "filterpanel.real_start_time": "Realiserad starttid",
@@ -42,7 +43,8 @@
   "map.stops.doors_not_open": "Dörrarna öppnades aldrig på denna hållplats",
   "map.stops.select_stop": "Välj hållplats",
   "map.road": "Väg",
-  "map.aerial": "Väder",
+  "map.aerial": "Luftbild",
+  "map.weather": "Väder",
   "map.stop_radius": "Hållplatsradie",
 
   "vehicle.next_stop": "Nästa hållplats",
@@ -65,8 +67,32 @@
   "journey.departure": "Avfärd",
   "journey.end_of_stream": "De sista uppgifterna används som hållplatsens avfärd.",
   "journey.duration": "Resans tidslängd",
+  "journey.hide_graph": "Göm fördröjningar och medelhastigheter",
+  "journey.show_graph": "Visa fördröjningar och medelhastigheter",
   "journey.stops": "Hållplatser",
   "journey.events": "Händelser",
+
+  "journey.event.DEP": "Poistuminen pysäkkialueelta",
+  "journey.event.ARR": "Saapuminen pysäkkialueelle",
+  "journey.event.TIMING_STOP_ARR": "Saapuminen pysäkkialueelle",
+  "journey.event.TERMINAL_ARR": "Saapuminen pysäkkialueelle",
+  "journey.event.PLANNED": "Suunniteltu lähtö",
+  "journey.event.CANCELLATION": "Peruutus",
+  "journey.event.DOO": "Ovi auki",
+  "journey.event.DOC": "Ovi kiinni",
+  "journey.event.DUE": "Saapumassa pysäkille",
+  "journey.event.ARS": "Saapuminen",
+  "journey.event.PDE": "Lähtö",
+  "journey.event.PAS": "Ajo pysäkin ohi pysähtymättä",
+  "journey.event.WAIT": "Odottaa pysäkillä",
+  "journey.event.TLR": "Liikennevaloetuus&shy;tapahtuma",
+  "journey.event.TLA": "Liikennevalokojeen vastaus",
+  "journey.event.DA": "Kuljettaja kirjautunut ajoneuvoon",
+  "journey.event.DOUT": "Kuljettaja kirjautunut ulos ajoneuvosta",
+  "journey.event.BA": "Kuljettaja valinnut lähtöketjun",
+  "journey.event.BOUT": "Kuljettaja kirjautunut ulos lähtöketjusta",
+  "journey.event.VJA": "Kuljettaja kirjautunut lähtöön",
+  "journey.event.VJOUT": "Kuljettaja kirjautunut ulos lähdöstä",
 
   "domain.line": "Linje",
   "domain.route": "Rutt",
