Refine help texts (WIP for swe) and add tooltips to journey events.

--- a/src/languages/help/se.json
+++ b/src/languages/help/se.json
@@ -1,78 +1,54 @@
 {
-  "filterpanel.heading": "Transitlog",
-  "filterpanel.reset": "Återställ",
-  "filterpanel.choose_date": "Välj datum",
-  "filterpanel.choose_date_time": "Välj datum och tid",
-  "filterpanel.choose_time": "Välj tid",
-  "filterpanel.time_increment": "Tidsändring (sek.)",
-  "filterpanel.simulate.start": "Simulera",
-  "filterpanel.simulate.stop": "Sluta simulera",
-  "filterpanel.filter_by_vehicle": "Sök fordon",
-  "filterpanel.filter_by_stop": "Sök hållplatser",
-  "filterpanel.filter_by_line": "Sök linjer",
-  "filterpanel.find_line_route": "Sök linje och rutt",
-  "filterpanel.select_route": "Välj rutt",
-  "filterpanel.planned_start_time": "Planerad starttid",
-  "filterpanel.real_start_time": "Realiserad starttid",
-  "filterpanel.journey.unrealized": "Ogenomförd",
-  "filterpanel.journey.no_data": "Ingen data",
-  "filterpanel.journey.incomplete_data": "Ofullständig data",
-  "filterpanel.journey.click_to_fetch": "Hämta",
-  "filterpanel.clear.stop": "Återställ hållplats",
-  "filterpanel.clear.vehicle": "Återställ fordon",
-
-  "sidepanel.tabs.journeys": "Resor",
-  "sidepanel.tabs.timetables": "Tidtabeller",
-  "sidepanel.tabs.vehicle_journeys": "Fordonsresor",
-  "sidepanel.tabs.area_events": "Områdets resor",
-  "sidepanel.area_events.show_lines": "Visa som streck",
-  "sidepanel.area_events.show_markers": "Visa som markörer",
-
-  "map.stops.arrive": "Anländningstid",
-  "map.stops.depart": "Avgångstid",
-  "map.stops.planned_driveby": "Planerad körtid",
-  "map.stops.observed_driveby": "Observerad körtid",
-  "map.stops.show_in_streetview": "Visa i gatuvy",
-  "map.stops.doors_not_open": "Dörrarna öppnades aldrig på denna hållplats",
-
-  "vehicle.next_stop": "Nästa hållplats",
-  "vehicle.speed": "Hastighet",
-  "vehicle.registry_nr": "Registernummer",
-  "vehicle.age": "Fordonets ålder",
-  "vehicle.identifier": "Fordonets ID",
-  "vehicle.operator": "Operatör",
-  "vehicle.subcontractor": "Underleverantör",
-  "vehicle.delay.late": "Försenad",
-  "vehicle.delay.early": "Tidig",
-  "vehicle.delay.ontime": "I tid",
-
-  "journey.terminal_time": "Terminaltid",
-  "journey.recovery_time": "Återhämtningstid",
-  "journey.requested_equipment": "Utrustning",
-  "journey.departure_minus_terminal": "avgångstid - terminaltid",
-  "journey.stops_hidden": "hållplatser gömda",
-  "journey.arrival": "Ankomst",
-  "journey.departure": "Avfärd",
-  "journey.end_of_stream": "De sista uppgifterna används som hållplatsens avfärd.",
-  "journey.duration": "Resans tidslängd",
-
-  "domain.line": "Linje",
-  "domain.route": "Rutt",
-
-  "general.minutes": "minuter",
-  "general.hour": "timme",
-  "general.year": "år",
-  "general.year.plural": "år",
-  "general.timerange.min": "min",
-  "general.timerange.max": "max",
-  "general.day": "dag",
-  "general.week": "vecka",
-  "general.seconds.short": "sek.",
-  "general.loading": "Laddar",
-  "general.error": "Fel",
-  "general.journey": "resa",
-  "general.update": "Uppdatera",
-  "general.live": "Live",
-  "general.no_type": "Ingen typ",
-  "general.share": "Dela vy"
+  "One week backward": "Valitse päivämäärä yhden viikon takaa.",
+  "One week forward": "Valitse päivämäärä yhden viikon päästä.",
+  "One day backward": "Valitse eilinen päivämääräksi.",
+  "One day forward": "Valitse huominen päivämääräksi.",
+  "Select date field": "Valitse päivämäärä. Kaikki Transitlogin näyttämät tiedot ovat tämän päivämäärän mukaisia.",
+  "One time step backward": "Yksi aika-askel taaksepäin",
+  "One time step forward": "Yksi aika-askel eteenpäin",
+  "Select time": "Valitse aika josta haluat tutkia tietoja. Voit myös asettaa aikaa liukusäätimellä.",
+  "Time increment field": "Aseta kuinka paljon aika muuttuu kun simulointi on käynnissä tai kun käytät aikakentän eteenpäin/taaksepäin nappeja",
+  "Search range minutes field": "Aseta aluehaun aikaväli, eli kuinka pitkältä aikaväliltä aluehaku hakee tapahtumia. Aikavälin keskipiste on valittu aika hakuhetkellä.",
+  "Select route": "Valitse reitin minkä haluat tutkia.",
+  "Select vehicle": "Etsi HSL-alueen ajoneuvoa rekisterinumerolla, kylkinumerolla tai liikennöitsijän nimellä. Korostettuina ajoneuvot jotka ovat olleet linja-ajossa kyseisenä päivänä",
+  "Select vehicle disabled": "Ajoneuvohaku on suljettu kun sinulla on valittu lähtö. Poista lähtö-valinta niin voit hakea ajoneuvoa.",
+  "Select stop": "Etsi pysäkki pysäkkinumerolla, tunnisteella tai nimellä.",
+  "Clear vehicle": "Tyhjentää ajoneuvohaku-kenttää. Tiedot mitkä haettiin ajoneuvotiedon pohjalta tyhjentyy myös.",
+  "Clear stop": "Tyhjentää pysäkkihaku-kenttää. Tiedot jotka haettiin pysäkkitiedon pohjalta tyhjentyy myös.",
+  "Time slider": "Säädä aika-asetus vierittämällä liukusäädintä. Säädin on rajoitettu yhteen päivään kun matkaa ei ole valittuna, ja rajoitettu valitun matkan alku- ja loppuaikaan kun on valittu. Aika päivittyy heti ja liukusäädin on kätevä tapa tutkia matkojen etenemisiä.",
+  "Share button": "Avaa ikkuna mistä voit kopioida linkin jaettavaksi. Linkin avaaja näkee juuri saman näkymän kun mitä sinä näet nyt.",
+  "Language select finnish": "Valitse käyttöliittymän kieleksi suomi.",
+  "Language select swedish": "Valitse käyttöliittymän kieleksi ruotsi.",
+  "Language select english": "Valitse käyttöliittymän kieleksi englanti.",
+  "Reset button": "Nollaa ja tyhjentää kaikki kentät ja asetukset. Jättää aika-asetukset (päivämäärä ja aika) ennalleen.",
+  "Update button": "Päivittää aika-asetukset (päivämäärä ja aika) nykyhetkeen ja virkistää kaikkia haettuja HFP-tietoja.",
+  "Live toggle": "Jos aika-asetukset ovat asetettu nykyhetkeen, päivittää haettuja HFP-tietoja noin kerran sekunnissa. Jos aika-asetukset ovat asetettu menneisyyteen, lisää 5 sekuntia (tai \"aikamuutos\" asetuksen mukainen arvo) kelloon per sekunti jolloin aika-herkät tiedot päivittyy.",
+  "Area search tab": "Aluehaun tulokset ryhmitetty matkoittain.",
+  "Journeys tab": "Valitun reitin kaikki matkat valitun päivän aikana.",
+  "Weekly journeys tab": "Valitun reitin kaikki matkat viikon ajan.",
+  "Vehicle journeys tab": "Valitun ajoneuvon koko lähtöketju valitun päivän aikana.",
+  "Timetable tab": "Valitun pysäkin kaikki lähdöt valitun päivän aikana.",
+  "Help tab": "Ohjeet alkuun pääsemiseksi.",
+  "Toggle sidebar button": "Piilota tai näytä sivupalkki.",
+  "Toggle journey details button": "Piilota tai näytä valitun matkan tiedot.",
+  "Toggle journey graph button": "Piilota tai näytä valitun matkan viiveet ja nopeudet kaaviona.",
+  "Planned journey time": "Matkan suunniteltu alkuaika.",
+  "Planned journey time with data": "Matkan suunniteltu alkuaika. Valitse tämä lähtö klikkaamalla.",
+  "Journey no data": "Tämän matkan toteumasta ei ole tietoja. Se on vielä tulevaisuudessa, auton GPS ei toiminut oikein tai sitä jätettiin ajaamatta.",
+  "Journey list diff": "Aikaero suunnittelun ja toteutuneen lähdön välillä. Punainen = lähtö ennen suunniteltua lähtöä, keltainen = lähtö yli 3min suunnitellun lähdön jälkeen, vihreä = lähtö alle 3min suunnitellun lähdön jälkeen. Jos toteutunut lähtö tapahtui ennen suunniteltua lähtöaikaa (punainen), numero on negatiivinen.",
+  "Journey list observed": "Toteutunut lähtöaika.",
+  "Journey list row": "Valitse tämä lähtö klikkaamalla.",
+  "Journey instance": "Jos vuoro ajetaan monella kulkuneuvolla, tämä on kulkuneuvon järjestysnumero.",
+  "Journey day type": "Lähdön päivätyyppi. Jos näet tämän, kyseessä on erikoislähtö tai lähdön päivätyyppi on eri kuin valittu päivämäärän päivätyyppi.",
+  "All alerts": "Listaus kaikista poikkeuksista ja peruutuksista tältä päivältä.",
+  "All cancellations heading": "Tämä on lista kaikista tämän päivän peruutuksista. Reitit ja lähdöt näyttävät vain niihin kohdistuvia peruutuksia.",
+  "All alerts heading": "Tämä on lista kaikista poikkeuksista mitkä olivat voimassa valittuna aikana. Säädä aikaa nähdäksesi muita poikkeuksia jotka olivat voimassa muina aikoina.",
+  "Alerts heading": "Kaikki valitun kohteen poikkeukset mitkä olivat voimassa tähän aikaan.",
+  "Cancellations heading": "Kaikki tämän reitin tai lähdön peruutukset.",
+  "Sign in": "Kirjaudu sisään.",
+  "Sign in with HSL-ID": "Kirjaudu sisään käyttäen HSL-ID:tä.",
+  "Developer sign in": "Kirjaudu sisään käyttäen kehittäjätunnuksia.",
+  "Create user": "Luo HSL ID-tunnus kirjautuaksesi palveluun.",
+  "Focus on stop": "Kohdista pysäkkiin klikkaamalla.",
+  "Show info": "Näytä tai piilota käyttöohjeet."
 }
