--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -82,8 +82,8 @@
   "journey.event.DOC": "Door closed",
   "journey.event.DUE": "Arriving at stop",
   "journey.event.ARS": "Arrived at stop",
-  "journey.event.PDE": "Ready tod epart from stop",
-  "journey.event.PAS": "Passsed stop without stopping",
+  "journey.event.PDE": "Ready to depart from stop",
+  "journey.event.PAS": "Passed stop without stopping",
   "journey.event.WAIT": "Waiting at stop",
   "journey.event.TLR": "Traffic light priority event",
   "journey.event.TLA": "Traffic light priority request answered",
