--- a/src/languages/help/en.json
+++ b/src/languages/help/en.json
@@ -31,6 +31,7 @@
   "Help tab": "Instrutions for getting started.",
   "Toggle sidebar button": "Show or hide the sidebar.",
   "Toggle journey details button": "Show or hide information about the currently selected journey or departure.",
+  "Toggle journey graph button": "Show or hide the graph of delays and average speed.",
   "Planned journey time": "The planned departure time. Click to see more information about this departure.",
   "Planned journey time with data": "The planned departure time of the journey. Click to select the journey and see more information.",
   "Journey no data": "No observed events were found for this journey. If it is not in the future it may have been cancelled or the victim of a technical error.",
@@ -43,5 +44,13 @@
   "All cancellations heading": "This is a list of all cancellations from today. Routes and departures will show only cancellations that apply to them.",
   "All alerts heading": "This is a list of all alerts that were active during the selected time. Adjust the time to show other alerts that were active during other times.",
   "Alerts heading": "All alerts that apply to this item that were in effect at this time.",
-  "Cancellations heading": "All cancellations for this route or departure."
+  "Cancellations heading": "All cancellations for this route or departure.",
+  "Sign in": "Kirjaudu sisään.",
+  "Sign in with HSL-ID": "Kirjaudu sisään käyttäen HSL-ID:tä.",
+  "Developer sign in": "Kirjaudu sisään käyttäen kehittäjätunnuksia.",
+  "Create user": "Luo HSL ID-tunnus kirjautuaksesi palveluun.",
+  "Focus on stop": "Kohdista pysäkkiin klikkaamalla.",
+  "Show info": "Näytä tai piilota käyttöohjeet.",
+
+  "PDE": "Doors closed"
 }
