--- a/src/languages/help/fi.json
+++ b/src/languages/help/fi.json
@@ -50,5 +50,7 @@
   "Developer sign in": "Kirjaudu sisään käyttäen kehittäjätunnuksia.",
   "Create user": "Luo HSL ID-tunnus kirjautuaksesi palveluun.",
   "Focus on stop": "Kohdista pysäkkiin klikkaamalla.",
-  "Show info": "Näytä tai piilota käyttöohjeet."
+  "Show info": "Näytä tai piilota käyttöohjeet.",
+
+  "PDE": "Ovet laitettu kiinni"
 }
