Fix null stop conditions in routestop and journeye events.

--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -138,6 +138,7 @@
   "general.type": "Typ",
   "general.previous": "Föregående",
   "general.previous.plural": "Föregående",
+  "general.unknown": "Okänd",
 
   "message.emptyview.network": "Denna vy är tom på grund av ett nätfel. Försökra dig om att du har en aktiv nätförbindelse och prova sedan igen.",
   "message.emptyview.authentication": "Datan i denna vy kräver inloggning, eller så har ditt konto inte rättighet.",
