--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -138,6 +138,7 @@
   "general.type": "Type",
   "general.previous": "Previous",
   "general.previous.plural": "Previous",
+  "general.unknown": "Unknown",
 
   "message.emptyview.network": "The data in this view is unavailable due to a network issue. Make sure you are online and try again.",
   "message.emptyview.authentication": "You need to be logged in to get access to the data in this view, or this account is not authorized.",
