--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -138,6 +138,7 @@
   "general.type": "Tyyppi",
   "general.previous": "Edellinen",
   "general.previous.plural": "Edelliset",
+  "general.unknown": "Ei tiedossa",
 
   "message.emptyview.network": "Verkko-ongelman takia tämä näkymä ei ole saatavilla. Varmista että sinulla on yhteys verkkoon ja kokeile uudelleen.",
   "message.emptyview.authentication": "Tämän näkymän tiedot vaatii kirjautumista, tai tililläsi ei ole vaadittu oikeustaso.",
