--- a/src/languages/help/fi.json
+++ b/src/languages/help/fi.json
@@ -52,5 +52,14 @@
   "Focus on stop": "Kohdista pysäkkiin klikkaamalla.",
   "Show info": "Näytä tai piilota käyttöohjeet.",
 
-  "PDE": "Ovet laitettu kiinni"
+  "PDE": "Lähtö, ovet laitettu kiinni.",
+  "DEP": "Lähtö, ajoneuvo poistunut pysäkkialueelta.",
+  "ARS": "Saapuminen, ajoneuvo pysähtynyt pysäkillä.",
+  "ARR": "Saapuminen, ajoneuvo pysäkkialueen sisällä.",
+  "ALL": "Näytä tai piilota kaikki tapahtumat. Piilotus palauttaa filtterit alkuasentoon jolloin näkyy tärkeimmät lähdöt ja saapumiset.",
+  "DEPARTURE": "Lähtö pysäkiltä. Tällä filtterillä näkyy DEP-tapahtuma reitin alkupysäkiltä ja ajantasauspysäkeiltä, ja PDE-tapahtuma muille pysäkeille.",
+  "TIMING_STOP_ARS": "Ajantasauspysäkille saapuminen. Näyttää vain ajantasauspysäkkien ARS-tapahtumat.",
+  "TERMINAL_ARS": "Alku- tai päätypysäkille saapuminen. Näyttää vain näiden pysäkkien ARS-tapahtumat.",
+  "PLANNED": "Suunniteltu lähtö JOREn mukaan.",
+  "CANCELLATION": "Peruutustapahtumat."
 }
