--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -74,17 +74,19 @@
   "journey.event.doors_not_open": "Ovet eivät auenneet",
   "journey.event.vehicle_not_stopped": "Ajoneuvo ei pysähtynyt",
 
-  "journey.event.DEP": "Lähtö",
+  "journey.event.ALL": "Kaikki tapahtumat",
+  "journey.event.DEP": "Lähtö pysäkkialueelta",
   "journey.event.ARR": "Saapuminen pysäkkialueelle",
-  "journey.event.TIMING_STOP_ARR": "Saapuminen pysäkkialueelle",
-  "journey.event.TERMINAL_ARR": "Saapuminen pysäkkialueelle",
+  "journey.event.DEPARTURE": "Lähtö",
+  "journey.event.TIMING_STOP_ARS": "Saapuminen",
+  "journey.event.TERMINAL_ARS": "Saapuminen",
   "journey.event.PLANNED": "Suunniteltu lähtö",
   "journey.event.CANCELLATION": "Peruutus",
   "journey.event.DOO": "Ovi auki",
   "journey.event.DOC": "Ovi kiinni",
   "journey.event.DUE": "Saapumassa pysäkille",
   "journey.event.ARS": "Saapuminen",
-  "journey.event.PDE": "Valmis lähtemään pysäkiltä",
+  "journey.event.PDE": "Lähtö",
   "journey.event.PAS": "Ajo pysäkin ohi pysähtymättä",
   "journey.event.WAIT": "Odottaa pysäkillä",
   "journey.event.TLR": "Liikennevaloetuus&shy;tapahtuma",
@@ -95,6 +97,13 @@
   "journey.event.BOUT": "Kuljettaja kirjautunut ulos lähtöketjusta",
   "journey.event.VJA": "Kuljettaja kirjautunut lähtöön",
   "journey.event.VJOUT": "Kuljettaja kirjautunut ulos lähdöstä",
+
+  "journey.event.short.ALL": "Kaikki",
+  "journey.event.short.DEPARTURE": "Lähtö",
+  "journey.event.short.TIMING_STOP_ARS": "ATP saapuminen",
+  "journey.event.short.TERMINAL_ARS": "Term. saapuminen",
+  "journey.event.short.PLANNED": "JORE lähtö",
+  "journey.event.short.CANCELLATION": "Peruutus",
 
   "domain.line": "Linja",
   "domain.route": "Reitti",
