--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -155,5 +155,6 @@
   "message.emptyview.network": "Verkko-ongelman takia tämä näkymä ei ole saatavilla. Varmista että sinulla on yhteys verkkoon ja kokeile uudelleen.",
   "message.emptyview.authentication": "Tämän näkymän tiedot vaatii kirjautumista, tai tililläsi ei ole vaadittu oikeustaso.",
   "message.emptyview.nodata": "Palvelin ei palauttanut yhtään tietoja tälle näkymälle.",
-  "message.emptyview.unknown": "Jonkun ongelman takia tämän näkymän tiedot ei ole saatavilla tai se ei ole olemassa."
+  "message.emptyview.unknown": "Jonkun ongelman takia tämän näkymän tiedot ei ole saatavilla tai se ei ole olemassa.",
+  "message.emptyview.noareevents": "Aluehaku ei palauttanut tuloksia."
 }
