Vehicle block view auth message.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -155,5 +155,6 @@
   "message.emptyview.authentication": "You need to be logged in to get access to the data in this view, or this account is not authorized.",
   "message.emptyview.nodata": "The server did not return any data for this request.",
   "message.emptyview.unknown": "For some reason, the data in this view is unavailable or does not exist.",
-  "message.emptyview.noareevents": "The area search did not return any results."
+  "message.emptyview.noareevents": "The area search did not return any results.",
+  "message.emptyview.vehicleauth": "Departure block view requires authorization."
 }
