--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -154,5 +154,6 @@
   "message.emptyview.authentication": "Datan i denna vy kräver inloggning, eller så har ditt konto inte rättighet.",
   "message.emptyview.nodata": "Servern gav inte någon data för denna vy.",
   "message.emptyview.unknown": "Denna vy är inte tillgänglig på grund av ett okänt fel eller för att datan inte existerar.",
-  "message.emptyview.noareevents": "Områdssökningen gav inga resultat."
+  "message.emptyview.noareevents": "Områdssökningen gav inga resultat.",
+  "message.emptyview.vehicleauth": "Avgångskedjelistan kräver autentikation."
 }
