Fix text translations in login modal.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -118,6 +118,10 @@
   "domain.alerts.subset": "Alerts",
   "domain.cancelled": "Cancelled",
 
+  "auth.login": "Log in (HSL ID)",
+  "auth.logout": "Log out",
+  "auth.create_account": "Create Reittiloki account",
+
   "general.minutes": "minutes",
   "general.hour": "hour",
   "general.year": "year",
