--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -119,6 +119,10 @@
   "domain.alerts.subset": "Poikkeustiedotteet",
   "domain.cancelled": "Peruutettu",
 
+  "auth.login": "Kirjaudu (HSL ID)",
+  "auth.logout": "Kirjaudu ulos",
+  "auth.create_account": "Tee Reittiloki-tunnus",
+
   "general.minutes": "minuutteja",
   "general.hour": "tunti",
   "general.year": "vuosi",
