--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -160,5 +160,7 @@
   "message.emptyview.nodata": "The server did not return any data for this request.",
   "message.emptyview.unknown": "For some reason, the data in this view is unavailable or does not exist.",
   "message.emptyview.noareevents": "The area search did not return any results.",
-  "message.emptyview.vehicleauth": "Departure block view requires authorization."
+  "message.emptyview.vehicleauth": "Departure block view requires authorization.",
+  "message.emptyview.noalerts": "No alerts.",
+  "message.emptyview.nocancellations": "No cancellations."
 }
