Correct journey selection in weekly journeys last stop arrival mode. Query for origin departure data.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -122,6 +122,7 @@
   "auth.logout": "Log out",
   "auth.create_account": "Create Reittiloki account",
 
+  "general.time": "Time",
   "general.minutes": "minutes",
   "general.hour": "hour",
   "general.year": "year",
