--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -29,6 +29,8 @@
 
   "sidepanel.tabs.journeys": "Lähdöt",
   "sidepanel.tabs.week_journeys": "Viikon lähdöt",
+  "sidepanel.tabs.week_journeys.first_stop_depart": "lähtö",
+  "sidepanel.tabs.week_journeys.last_stop_arrive": "saapuminen",
   "sidepanel.tabs.timetables": "Aikataulut",
   "sidepanel.tabs.vehicle_journeys": "Lähtöketju",
   "sidepanel.tabs.area_events": "Alueen matkat",
