--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -29,6 +29,8 @@
 
   "sidepanel.tabs.journeys": "Resor",
   "sidepanel.tabs.week_journeys": "Reseveckan",
+  "sidepanel.tabs.week_journeys.first_stop_depart": "avgång",
+  "sidepanel.tabs.week_journeys.last_stop_arrive": "ankomst",
   "sidepanel.tabs.timetables": "Tidtabeller",
   "sidepanel.tabs.vehicle_journeys": "Fordonsresor",
   "sidepanel.tabs.area_events": "Områdets resor",
