Add today button to datepicker.

--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -136,6 +136,7 @@
   "general.sunday": "Sun",
   "general.day": "day",
   "general.week": "week",
+  "general.today": "Today",
   "general.seconds.short": "sec.",
   "general.loading": "Loading",
   "general.error": "Error",
