--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -137,6 +137,7 @@
   "general.sunday": "Su",
   "general.day": "päivä",
   "general.week": "viikko",
+  "general.today": "Tänään",
   "general.seconds.short": "sek.",
   "general.loading": "Ladataan",
   "general.error": "Virhe",
