--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -135,6 +135,7 @@
   "general.sunday": "Sö",
   "general.day": "dag",
   "general.week": "vecka",
+  "general.today": "Idag",
   "general.seconds.short": "sek.",
   "general.loading": "Laddar",
   "general.error": "Fel",
