--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -20,7 +20,7 @@
   "filterpanel.planned_start_time": "Planned start time",
   "filterpanel.real_start_time": "Observed start time",
   "filterpanel.journey.unrealized": "Unrealized",
-  "filterpanel.journey.no_data": "No data",
+  "filterpanel.journey.no_data": "Data missing",
   "filterpanel.journey.incomplete_data": "Incomplete data",
   "filterpanel.journey.click_to_fetch": "Fetch",
   "filterpanel.clear.stop": "Clear stop",
