--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -20,7 +20,7 @@
   "filterpanel.planned_start_time": "Suunniteltu lähtöaika",
   "filterpanel.real_start_time": "Toteutunut lähtöaika",
   "filterpanel.journey.unrealized": "Toteutumaton",
-  "filterpanel.journey.no_data": "Ei tietoja",
+  "filterpanel.journey.no_data": "Tietoja puuttuu",
   "filterpanel.journey.incomplete_data": "Puutteelliset tiedot",
   "filterpanel.journey.click_to_fetch": "Hae",
   "filterpanel.clear.stop": "Tyhjennä pysäkkivalinta",
