UI text translations WIP.

--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -109,6 +109,19 @@
   "journey.event.short.PLANNED": "JORE avgång",
   "journey.event.short.CANCELLATION": "Peruutus",
 
+  "journey.health.passed": "Kunnossa",
+  "journey.health.failed": "Virhe",
+  "journey.health.pending": "Odottaa",
+  "journey.health.doors": "Ovet",
+  "journey.health.GPS": "GPS",
+  "journey.health.stops": "Pysäkit",
+  "journey.health.positions": "Paikkatieto",
+  "journey.health.firstStopDeparture": "Lähtö ensimmäiseltä pysäkiltä ",
+  "journey.health.lastStopArrival": "Saapuminen viimeiselle pysäkille",
+  "journey.health.timingStopDepartures": "Lähtö ajantasauspysäkeiltä",
+  "journey.health.not_complete": "Matka on vielä käynnissä.",
+  "journey.health.data_missing": "One or more aspect of the journey data is missing.",
+
   "domain.line": "Linje",
   "domain.route": "Rutt",
   "domain.direction": "riktning",
