--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -111,6 +111,19 @@
   "journey.event.short.PLANNED": "JORE lähtö",
   "journey.event.short.CANCELLATION": "Peruutus",
 
+  "journey.health.passed": "Kunnossa",
+  "journey.health.failed": "Virhe",
+  "journey.health.pending": "Odottaa",
+  "journey.health.doors": "Ovet",
+  "journey.health.GPS": "GPS",
+  "journey.health.stops": "Pysäkit",
+  "journey.health.positions": "Paikkatieto",
+  "journey.health.firstStopDeparture": "Lähtö ensimmäiseltä pysäkiltä ",
+  "journey.health.lastStopArrival": "Saapuminen viimeiselle pysäkille",
+  "journey.health.timingStopDepartures": "Lähtö ajantasauspysäkeiltä",
+  "journey.health.not_complete": "Matka on vielä käynnissä.",
+  "journey.health.data_missing": "One or more aspect of the journey data is missing.",
+
   "domain.line": "Linja",
   "domain.route": "Reitti",
   "domain.direction": "suunta",
