--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -110,18 +110,18 @@
   "journey.event.short.PLANNED": "JORE departure",
   "journey.event.short.CANCELLATION": "Cancellation",
 
-  "journey.health.passed": "Kunnossa",
-  "journey.health.failed": "Virhe",
-  "journey.health.pending": "Odottaa",
-  "journey.health.doors": "Ovet",
+  "journey.health.passed": "OK",
+  "journey.health.failed": "Failed",
+  "journey.health.pending": "Pending",
+  "journey.health.doors": "Doors",
   "journey.health.GPS": "GPS",
-  "journey.health.stops": "Pysäkit",
-  "journey.health.positions": "Paikkatieto",
-  "journey.health.firstStopDeparture": "Lähtö ensimmäiseltä pysäkiltä ",
-  "journey.health.lastStopArrival": "Saapuminen viimeiselle pysäkille",
-  "journey.health.timingStopDepartures": "Lähtö ajantasauspysäkeiltä",
-  "journey.health.not_complete": "Matka on vielä käynnissä.",
-  "journey.health.data_missing": "One or more aspect of the journey data is missing.",
+  "journey.health.stops": "Stops",
+  "journey.health.positions": "Positions",
+  "journey.health.firstStopDeparture": "Departure from first stop",
+  "journey.health.lastStopArrival": "Arrival to last stop",
+  "journey.health.timingStopDepartures": "Departure from timing stops",
+  "journey.health.not_complete": "The journey is still ongoing.",
+  "journey.health.data_missing": "One or more aspects of the journey data are missing.",
 
   "domain.line": "Line",
   "domain.route": "Route",
