--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -109,18 +109,18 @@
   "journey.event.short.PLANNED": "JORE avgång",
   "journey.event.short.CANCELLATION": "Peruutus",
 
-  "journey.health.passed": "Kunnossa",
-  "journey.health.failed": "Virhe",
-  "journey.health.pending": "Odottaa",
-  "journey.health.doors": "Ovet",
+  "journey.health.passed": "OK",
+  "journey.health.failed": "Underkänd",
+  "journey.health.pending": "Oavgjord",
+  "journey.health.doors": "Dörrar",
   "journey.health.GPS": "GPS",
-  "journey.health.stops": "Pysäkit",
-  "journey.health.positions": "Paikkatieto",
-  "journey.health.firstStopDeparture": "Lähtö ensimmäiseltä pysäkiltä ",
-  "journey.health.lastStopArrival": "Saapuminen viimeiselle pysäkille",
-  "journey.health.timingStopDepartures": "Lähtö ajantasauspysäkeiltä",
-  "journey.health.not_complete": "Matka on vielä käynnissä.",
-  "journey.health.data_missing": "One or more aspect of the journey data is missing.",
+  "journey.health.stops": "Hållplatser",
+  "journey.health.positions": "Positioner",
+  "journey.health.firstStopDeparture": "Avgång fråm första hållplatsen",
+  "journey.health.lastStopArrival": "Ankonmst till sista hållplatsen",
+  "journey.health.timingStopDepartures": "Avgång från tidsjämningshållplatser",
+  "journey.health.not_complete": "Resan är ännu på gång.",
+  "journey.health.data_missing": "En eller flera aspekter av resans data fattas.",
 
   "domain.line": "Linje",
   "domain.route": "Rutt",
