--- a/src/languages/ui/en.json
+++ b/src/languages/ui/en.json
@@ -113,6 +113,7 @@
   "journey.health.passed": "OK",
   "journey.health.failed": "Failed",
   "journey.health.pending": "Pending",
+  "journey.health.unknown": "Unknown",
   "journey.health.doors": "Doors",
   "journey.health.GPS": "GPS",
   "journey.health.stops": "Stops",
@@ -122,6 +123,16 @@
   "journey.health.timingStopDepartures": "Departure from timing stops",
   "journey.health.not_complete": "The journey is still ongoing.",
   "journey.health.data_missing": "One or more aspects of the journey data are missing.",
+  "journey.health.origin_event_missing": "DEP-event missing from origin stop",
+  "journey.health.origin_event_virtual": "DEP-event is derived from vehicle posiitons for origin stop",
+  "journey.health.destination_event_missing": "ARS-event missing from destination stop",
+  "journey.health.destination_event_virtual": "ARS-event is derived from vehicle positions for destination stop",
+  "journey.health.timing_event_missing": "DEP-event missing from timing stop",
+  "journey.health.timing_event_virtual": "DEP-event is derived from vehicle positions for timing stop",
+  "journey.health.positions_not_found": "Vehicle positions not found.",
+  "journey.health.positions_gap": "Gap found in vehicle positions. Duration in seconds",
+  "journey.health.stop_events_not_found": "Stop events not found.",
+  "journey.health.stop_event_missing": "Stop events missing for stop",
 
   "domain.line": "Line",
   "domain.route": "Route",
