--- a/src/languages/ui/fi.json
+++ b/src/languages/ui/fi.json
@@ -114,6 +114,7 @@
   "journey.health.passed": "Kunnossa",
   "journey.health.failed": "Virhe",
   "journey.health.pending": "Odottaa",
+  "journey.health.unknown": "Ei tiedossa",
   "journey.health.doors": "Ovet",
   "journey.health.GPS": "GPS",
   "journey.health.stops": "Pysäkit",
@@ -123,6 +124,16 @@
   "journey.health.timingStopDepartures": "Lähtö ajantasauspysäkeiltä",
   "journey.health.not_complete": "Matka on vielä käynnissä.",
   "journey.health.data_missing": "Yksi tai monta osuutta matkan tiedoista puuttuu.",
+  "journey.health.origin_event_missing": "DEP-tapahtuma puuttuu lähtöpysäkiltä",
+  "journey.health.origin_event_virtual": "DEP-tapahtuma on luotu ajoneuvon paikkatiedoista lähtöpysäkille",
+  "journey.health.destination_event_missing": "ARS-tapahtuma puuttuu päätepysäkiltä",
+  "journey.health.destination_event_virtual": "ARS-tapahtuma on luotu ajoneuvon paikkatiedoista päätepysäkille",
+  "journey.health.timing_event_missing": "DEP-tapahtuma puuttuu ajantasauspysäkiltä",
+  "journey.health.timing_event_virtual": "DEP-tapahtuma on luotu ajoneuvon paikkatiedoista ajantasauspysäkille",
+  "journey.health.positions_not_found": "Ajoneuvon paikkatietoja ei löydetty.",
+  "journey.health.positions_gap": "Aukko löydetty ajoneuvon paikkatiedoista. Pituus sekunneissa:",
+  "journey.health.stop_events_not_found": "Pysäkkitapahtumia ei löydetty.",
+  "journey.health.stop_event_missing": "Pysäkkitapahtuma puuttuu pysäkille",
 
   "domain.line": "Linja",
   "domain.route": "Reitti",
