--- a/src/languages/ui/se.json
+++ b/src/languages/ui/se.json
@@ -112,15 +112,26 @@
   "journey.health.passed": "OK",
   "journey.health.failed": "Underkänd",
   "journey.health.pending": "Oavgjord",
+  "journey.health.unknown": "Okänd",
   "journey.health.doors": "Dörrar",
   "journey.health.GPS": "GPS",
   "journey.health.stops": "Hållplatser",
   "journey.health.positions": "Positioner",
   "journey.health.firstStopDeparture": "Avgång fråm första hållplatsen",
-  "journey.health.lastStopArrival": "Ankonmst till sista hållplatsen",
-  "journey.health.timingStopDepartures": "Avgång från tidsjämningshållplatser",
+  "journey.health.lastStopArrival": "Ankomst till sista hållplatsen",
+  "journey.health.timingStopDepartures": "Avgång från tidutjämningshållplatser",
   "journey.health.not_complete": "Resan är ännu på gång.",
   "journey.health.data_missing": "En eller flera aspekter av resans data fattas.",
+  "journey.health.origin_event_missing": "DEP-händelsen fattas för första hållplatsen",
+  "journey.health.origin_event_virtual": "DEP-händelsen härleder från fordonets positionshändelser för första hållplatsen",
+  "journey.health.destination_event_missing": "ARS-händelsen fattas frän destinationshållplatsen",
+  "journey.health.destination_event_virtual": "ARS-händelsen härleder från fordonets positionshändelser för destinationshållplatsen",
+  "journey.health.timing_event_missing": "DEP-händelsen fattas från tidutjämningshållplatsen",
+  "journey.health.timing_event_virtual": "DEP-händelsen härleder från fordonets positionshändelser för tidutjämningshållplatsen",
+  "journey.health.positions_not_found": "Fordonets positionshändelser fattas.",
+  "journey.health.positions_gap": "Lucka hittad i fordonets positionshändelser. Längd i sekunder",
+  "journey.health.stop_events_not_found": "Hållplatshändelser fattas.",
+  "journey.health.stop_event_missing": "Händelser fattas för hållplatsen",
 
   "domain.line": "Linje",
   "domain.route": "Rutt",
